--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/example/public_html/
-    - /bin/rsync -av
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - export DEPLOYPATH=/home/wwparc/public_html/
+    - /bin/cp -R . $DEPLOYPATH
